PDF: Add Chapter 3

--- a/PDF/my_folder/chapter2.tex
+++ b/PDF/my_folder/chapter2.tex
@@ -3,7 +3,7 @@
 % не рекомендуется использовать отдельную section <<введение>> после лета 2020 года
 %\section{Введение} \label{ch2:intro}
 
-В данной главе проводится теоретический анализ алгоритмов легковесной криптографии. Вводится их определение, требования к ним. Анализируются возможные подходы к защите от различных видов атак на устройства интернета вещей. Определяются виды алгоритмов, наиболее подходящие для реализации данных подходов, а также стандартные протоколы "общего назначения" для этой цели.
+В данной главе проводится теоретический анализ алгоритмов легковесной криптографии. Вводится их определение, требования к ним. Анализируются возможные подходы к защите от различных видов атак на устройства интернета вещей. Определяются виды алгоритмов, наиболее подходящие для реализации данных подходов, а также сравниваются со стандартными протоколами "общего назначения" для этой цели.
 
 \section{Легковесные алгоритмы: понятие, требования} \label{ch2:sec1}
 
@@ -192,6 +192,10 @@ LW-криптография используется для обеспечени
 Криптографическое хэширование однозначно не подходит для целей шифрования, так как является односторонним преобразованием: расшифровка хэша априори невозможна, возможно только сравнение хэшей. Впрочем, блочная шифрующая функция может быть интересна с криптографической точки зрения, и может быть использована как примитив при создании нового шифра, в том числе легковесного. Например, на базе алгоритма Present создана легковесная хэш-функция H-Present-128 \cite{src52}.
 
 Электронная цифровая подпись также не подходит для хэширования, так как использует в своем составе хэш. ЭЦП предназначены для гарантирования достоверности и целостности данных. В этом качестве она вполне может быть использована, о чем написано выше.
+
+\section{Выводы} \label{ch2:conclusion}
+
+В данной главе был проведен теоретический анализ алгоритмов легковесной криптографии. Введено их определение, требования к ним. Проанализированы возможные подходы к защите от различных видов атак на устройства интернета вещей. Определены виды алгоритмов, наиболее подходящие для реализации данных подходов, а также проведено их сравнение со стандартными протоколами "общего назначения" для этой цели.
 
 \newpage
 
