--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -488,12 +488,158 @@
 	doi = {10.1007/978-3-540-85053-3_18}
 }
 
+% Chapter 3
 
+@article{src53,
+	author={ Авдошин С. М. and Савельева А. А.},
+	title={ Криптоанализ и криптография: история противостояния },
+	journal={ Бизнес-информатика },
+	year={ 2009 },
+	number   = {2},
+  	hyphenation     = { russian }
+}
 
+@article{src54,
+	author={ Тутубалин П.И. and Кирпичников А.П.},
+	title={ Оценка криптографической стойкости алгоритмов асимметричного шифрования },
+	journal={ Вестник Казанского технологического университета },
+	year={ 2017 },
+	number   = {10},
+	hyphenation     = { russian }
+}
 
+@article{src55,
+	author={ Юрий Олегович Чернышев and Сергеевич Сергеев Александр and Николай Николаевич Венцов and Александр Николаевич Рязанов},
+	title={ Исследование возможности применения генетических алгоритмов для реализации криптоанализа блочных криптосистем },
+	journal={  Вестник ДГТУ },
+	year={ 2015 },
+	number   = {3 (82)},
+	hyphenation     = { russian }
+}
 
+@article{src56,
+	author={ Людмила Климентьевна Бабенко and Евгения Александровна Ищукова },
+	title={ Анализ симметричных криптосистем },
+	journal={ Известия ЮФУ. Технические науки },
+	year={ 2012 },
+	number   = {12 (137)},
+	hyphenation     = { russian }
+}
 
+@article{src57,
+	author={ Юрий Глебович Карпов and Петр Владимирович Трифонов },
+	title={ Сложность алгоритмов и программ },
+	journal={ КИО },
+	year={ 2007 },
+	number   = {6},
+	hyphenation     = { russian }
+}
 
+@Online{src58,
+	title= { Встроенные системы – регистры },
+	url =          { https://coderlessons.com/tutorials/akademicheskii/izuchite-vstroennye-sistemy/vstroennye-sistemy-registry },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@Online{src59,
+	title= { Реализация Задержки в AVR assembler без таймеров },
+	url =          {  https://habr.com/ru/post/167319/ },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@Online{src60,
+	title= { Lists of instruction latencies, throughputs and micro-operation breakdowns for Intel, AMD, and VIA CPUs },
+	url =          {  https://www.agner.org/optimize/instruction_tables.pdf },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@Online{src61,
+	title= { C/C++: как измерять процессорное время },
+	url =          {  https://habr.com/ru/post/282301/ },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@Online{src62,
+	title= { CPU Hyper-Threading },
+	url =          {  http://www.nastrojkabios.ru/protsessor/cpu-hyper-threading.html },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@Online{src63,
+	title= { How to Turn Down the CPU Speed in Your BIOS },
+	url =          {  https://smallbusiness.chron.com/turn-down-cpu-speed-bios-71566.html },
+	urldate =      {2020-06-10},
+	hyphenation =     { english }
+}
+
+@BOOKLET{src64,
+	title        = {Обработка результатов учебного эксперимента},
+	author       = {П.В. Попов and А.А. Нозик}, 
+	month        = {9},
+	year         = {2018},
+	pagetotal = {63},
+	url =          {  http://npm.mipt.ru/books/lab-intro/main.pdf },
+	urldate =      {2020-06-10},
+	hyphenation     = {russian}
+}
+
+@article{src65,
+	author={ Константин Михайлович Ханкин },
+	title={ Оценка влияния аппаратных технологий энергосбережения персонального компьютера на производительность и энергопотребление },
+	journal={  Вестник ЮУрГУ. Серия: Компьютерные технологии, управление, радиоэлектроника },
+	year={ 2012 },
+	number   = {23},
+	hyphenation     = { russian }
+}
+
+@Online{src66,
+	title= { Система измерения потребляемой процессором мощности своими руками },
+	url =          {  https://www.overclockers.ua/cpu/cpu-power/ },
+	urldate =      {2020-06-10},
+	hyphenation =     { russian }
+}
+
+@Online{src67,
+	title= { Методика измерения энергопотребления при тестировании процессоров iXBT.com },
+	url =          {  https://www.ixbt.com/cpu/cpu-power-measurement.shtml },
+	urldate =      {2020-06-10},
+	hyphenation =     { russian }
+}
+
+@Online{src68,
+	title= { Блоки питания стандарта EPS12V },
+	url =          {  http://al-tm.ru/stati/stati-po-blokam-pitaniya/bloki-pitaniya-standarta-eps12v },
+	urldate =      {2020-06-10},
+	hyphenation =     { russian }
+}
+
+@Online{src69,
+	title= { Загрузка процессора — программы и советы },
+	url =          {  https://www.softsalad.ru/articles/best-programms/cpu-viewer-software },
+	urldate =      {2020-06-10},
+	hyphenation =     { russian }
+}
+
+@Online{src70,
+	title= { Загрузка процессора — программы и советы },
+	url =          {  https://www.softsalad.ru/articles/best-programms/cpu-viewer-software },
+	urldate =      {2020-06-10},
+	hyphenation =     { russian }
+}
+
+@article{src71,
+	author={ Константин Михайлович Ханкин },
+	title={  О методе оценки соответствия энергозатратности вычислительной задачи требованиям к энергопотреблению и его реализации с помощью StarPU },
+	journal={ Вестник ЮУрГУ. Серия: Компьютерные технологии, управление, радиоэлектроника },
+	year={2013},
+	number   = {1},
+	hyphenation     = {russian},
+}
 
 
 
